modify get config to get multiple profile